wrap root in withRouter to fix route issue

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,3 @@
-/*
- * Hi! I'm your stylesheet! I've got some sensible defaults here,
- * but feel free to change me to your heart's content!
- */
-
 * {
   box-sizing: border-box;
   font-family: arial, sans-serif;
@@ -21,7 +16,7 @@ nav {
   background-color: #333333;
   color: #c0c0c0;
   display: flex;
-  height: 80px;
+  height: 100px;
   padding: 10px;
 }
 
